--- a/Solution/Source/NCore/Resources/ExceptionMessages.resx
+++ b/Solution/Source/NCore/Resources/ExceptionMessages.resx
@@ -117,22 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EnsureExtensions_IsGteThan" xml:space="preserve">
+    <value>value '{0}' is not &gt;= limit '{1}'.</value>
+  </data>
+  <data name="EnsureExtensions_IsGtThan" xml:space="preserve">
+    <value>value '{0}' is &lt;= limit '{1}'.</value>
+  </data>
+  <data name="EnsureExtensions_IsInRange_ToHigh" xml:space="preserve">
+    <value>value '{0}' is &gt; max '{1}'.</value>
+  </data>
+  <data name="EnsureExtensions_IsInRange_ToLow" xml:space="preserve">
+    <value>value '{0}' is &lt; min '{1}'.</value>
+  </data>
+  <data name="EnsureExtensions_IsNonEmptyCollection" xml:space="preserve">
+    <value>Empty collection is not allowed.</value>
+  </data>
+  <data name="EnsureExtensions_IsNonEmptyGuid" xml:space="preserve">
+    <value>Empty Guid is not allowed.</value>
+  </data>
+  <data name="EnsureExtensions_IsNotNull" xml:space="preserve">
+    <value>Value can not be null.</value>
+  </data>
   <data name="StringConverter_AsString_TypeOfValueIsNotSupported" xml:space="preserve">
     <value>The value being retrieved is not of supported type. It must either be a string or the type needs to implement IConvertible or if Nullable&lt;T&gt;, then T needs to implement it.</value>
   </data>
   <data name="TypeExtensions_ExtractGenericType" xml:space="preserve">
     <value>Supported generic collections on model are: implementations of either IEnumerable&lt;T&gt; or IList&lt;T&gt;.</value>
-  </data>
-  <data name="ValidationExtensions_AssertGt" xml:space="preserve">
-    <value>value '{0}' is &lt;= limit '{1}'.</value>
-  </data>
-  <data name="ValidationExtensions_AssertGte" xml:space="preserve">
-    <value>value '{0}' is not &gt;= limit '{1}'.</value>
-  </data>
-  <data name="ValidationExtensions_AssertInRange_ToHigh" xml:space="preserve">
-    <value>value '{0}' is &gt; max '{1}'.</value>
-  </data>
-  <data name="ValidationExtensions_AssertInRange_ToLow" xml:space="preserve">
-    <value>value '{0}' is &lt; min '{1}'.</value>
   </data>
 </root>
